# HIVE

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  HIVE_MONKEY_BRAIN_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  USER_GUIDE.md  WELCOME.md  docker-compose.yml  dummy.json  fix_author_id.py  gauntlet_admin.txt  gauntlet_admin.txt content:[Host secured.  launch.bat  launch.sh  mastertestprompt.md  meshnetworktodolist.md  persona.toml.example  start_hive.sh  tarpaulin-report.html  test_daemon  test_daemon.rs  test_json_parse  test_json_parse.rs  test_repair.rs  upgrade.sh  whitepaper.md
deployment/: DEPLOYMENT.md  Dockerfile  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  setup_firewall.sh
examples/: test_pdf.rs
logs/: hive.log.2026-03-14  telemetry.jsonl
memory/: computer_grid.json
memory/autonomy/: activity.jsonl
memory/core/: drives.json  temporal_state.json
memory/public_test/: timeline.jsonl  transcript.jsonl
memory/teacher/: golden_buffer.jsonl  preference_buffer.jsonl
scripts/: tunnel.sh
src/: main.rs
src/agent/: aggregator.rs  attachment_tool.rs  autonomy_tool.rs  calendar_tool.rs  compiler_tool.rs  contacts_tool.rs  containment.rs  contributors_tool.rs  core_memory_drone.rs  core_memory_tool.rs  credits_tool.rs  credits_tool_tests.rs  deep_think_tool.rs  download_tool.rs  email_tool.rs  file_reader.rs  file_system_tool.rs  file_writer.rs  file_writer_tests.rs  goal_planner.rs  image_drone.rs  image_tool.rs  lessons_drone.rs  lessons_tool.rs  lifecycle.rs  log_tool.rs  mod.rs  moderation_tool.rs  moderation_tool_tests.rs  nft_tool.rs  opencode.rs  opencode_tests.rs  outreach.rs  planner.rs  preferences.rs  process_manager.rs  reasoning_tool.rs  registry.rs  routines.rs  scratchpad_drone.rs  (+23 more)
src/computer/: alu.rs  document.rs  document_tests.rs  download.rs  file_server.rs  flux_server.py  generate_image.py  mod.rs  pdf_styles.rs  turing_grid.rs  turing_grid_tests.rs
src/crypto/: access_queue.rs  credits.rs  keystore.rs  mod.rs  nft.rs  pricing.rs  solana.rs  tests.rs  token.rs
src/engine/: builder.rs  core.rs  core_pipeline.rs  drives.rs  goal_store.rs  goals.rs  inbox.rs  mod.rs  outreach.rs  react.rs  repair.rs  telemetry.rs  tests.rs  tests_commands.rs  tests_telemetry.rs
training/: train_teacher.py
(+88 files in other folders)
