[package]
name = "HIVE"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
futures = "0.3.32"
futures-util = "0.3.32"
mockall = "0.14.0"
neo4rs = "0.8.0"
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["client", "gateway", "rustls_backend", "model", "http"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "test-util"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
wiremock = "0.6.5"
