[package]
name = "HIVE"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
futures = "0.3.32"
futures-util = "0.3.32"
mockall = "0.14.0"
neo4rs = "0.8.0"
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"] }
headless_chrome = "1.0.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["client", "gateway", "rustls_backend", "model", "http"] }
sha2 = "0.10.9"
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "test-util"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.3"
urlencoding = "2.1.3"
dotenv = "0.15.0"
base64 = "0.22.1"
uuid = { version = "1.22.0", features = ["v4"] }
tokio-tungstenite = "0.26.2"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "tokio1", "tokio1-rustls-tls", "smtp-transport"] }
axum = "0.8.8"
regex = "1.12.3"
imap = "2"
native-tls = "0.2"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
mailparse = "0.16.1"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
mdns-sd = "0.12"
rmp-serde = "1.3"

[dev-dependencies]
tempfile = "3.26.0"
wiremock = "0.6.5"

[lib]
name = "hive_core"
crate-type = ["cdylib", "rlib"]

[dependencies.jni]
version = "0.21.1"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

